updated html and css for nav bar

--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
+@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic);
+
 body {
   height: 100%;
   width: 100%;
   margin: 0;
   padding: 0;
+  font-family: 'Lato', sans-serif;
 }
 
 p {
@@ -14,10 +17,15 @@ a {
   text-decoration: none;
   color: #c1c1c1;
   display: block;
+  margin: 0;
+  padding: 0;
 }
 
 li {
   list-style-type: none;
+}
+.clearfix {
+  overflow: auto;
 }
 
 a:visited {
@@ -31,16 +39,31 @@ a:hover {
 a:active {
   color: #ff6760;
 }
-
 nav {
+  background: #262626;
+  height: 100px;
+  transform-style: preserve-3d;
+}
+
+.navWrapper {
   display: flex;
+  flex-direction: row;
+  align-items: center;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+  max-width: 1110px;
+  margin: auto;
+  padding: 0;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .wpLogo {
   display: flex;
   background: #262626;
   align-items: center;
-  padding: 0 0 0 50px;
+  padding: 0;
 }
 
 .wpLogo > div {
@@ -50,20 +73,23 @@ nav {
 }
 
 .navBox {
+  display: -webkit-flex;
   display: flex;
+  -webkit-flex-direction: row;
   flex-direction: row;
   background: #262626;
-  padding: 50px;
+  margin: 0;
+  padding: 0;
 }
 
-.navBox > div {
-  margin: 0 30px;
+.navLink {
+  margin: 0 0 0 49px;
   padding: 0;
   color: #d9d9d9;
-  font-family: sans-serif;
   font-weight: 400;
   font-size: 13px;
   text-transform: uppercase;
+
 }
 
 .section1 {
@@ -72,36 +98,38 @@ nav {
   transform-style: preserve-3d;
 }
 .sec1container {
-    text-align: center;
-    position: relative;
-    top: 50%;
-    -webkit-transform-style: preserve-3d;
-    -moz-transform-style: preserve-3d;
-    transform: translateY(-50%);
+  margin: 0 0 10px 0;
+  padding: 0;
+  text-align: center;
+  position: relative;
+  top: 50%;
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  transform: translateY(-50%);
 }
 
-.sec1container>h2 {
-  font-size: 2rem;
-  font-weight: 100;
-  margin: 0;
+.sec1h2 {
+  font-size: 3.5rem;
+  font-weight: 300;
+  margin: 0 0 20px 0;
   padding: 0;
   color: #d9d9d9;
-  font-family: sans-serif;
-  letter-spacing: .2em;
+  letter-spacing: 2px;
 }
 
 .sec1container>p {
   color: #d9d9d9;
-  font-family: helvetica;
-  font-size: 1.5rem;
-  font-weight: lighter;
+  font-size: 2.5rem;
+  font-weight: 100;
+  margin: 0 0 50px 0;
+  padding: 0;
+  letter-spacing: 1px;
 }
 
-.sec1container > a {
-  margin-left: auto;
-  margin-right: auto;
+.portfoliolink {
+  display: inline-block;
+  margin: auto;
   color: #fff;
-  font-family: sans-serif;
   font-size: 1rem;
   text-transform: uppercase;
   background: #ff6760;
@@ -145,7 +173,6 @@ nav {
   height: auto;
   width: 220px;
   margin: 0 41px;
-  font-family: sans-serif;
   color: #616161;
 }
 
@@ -162,7 +189,6 @@ nav {
 .section3 {
   text-align: center;
   margin: 0;
-  font-family: sans-serif;
   color: #616161;
   font-weight: 100;
   position: relative;
@@ -176,7 +202,6 @@ nav {
   margin: 0 0 26px 0;
   padding: 0;
   color: #616161;
-  font-family: sans-serif;
 }
 .section3>p { 
   margin: 0 0 57px 0;
@@ -192,7 +217,6 @@ nav {
   display: inline-block;
   list-style-type: none;
   color: #fff;
-  font-family: sans-serif;
   font-size: .5rem;
   text-transform: uppercase;
   font-weight: 500;
@@ -231,41 +255,49 @@ footer {
   transform-style: preserve-3d;
 }
 .footercontainer {
-  font-family: sans-serif;
   color: #bebebe;
   font-weight: lighter;
   text-align: center;
-  font-size: .8rem;
+  font-size: 1rem;
   position: relative;
   top: 50%;
   transform: translateY(-50%);
 }
 
 footer h3 {
-  margin: 0;
+  margin: 0 0 15px 0;
   padding: 0;
   color: #e0e0e0;
-  font-size: 1.2rem;
+  font-size: 2rem;
+}
+footer p {
+  margin: 0 0 20px 0;
+  padding: 0;
+  color: #bebebe;
+
 }
 
 footer ul {
-  margin: 7px;
+  margin: 0 0 30px 0;
   padding: 0;
 }
 
 footer li {
   display: inline;
-  font-size: 10px;
+  font-size: 1rem;
+  font-weight: 300;
   color: #bebebe;
-  margin: 0;
+  margin: 0 15px;
   padding: 0;
+}
+footer img {
+  margin: 0 5px 0 0;
 }
 
 .icon {
   display: inline-block;
-  height: 19px;
   width: auto;
-  margin: 10px 1px;
+  margin: 0px 1px;
   padding: 0;
 }
 
@@ -278,9 +310,19 @@ footer li {
   height: 82px;
   font-family: sans-serif;
   text-align: center;
-  color: #888;
-  font-size: .5rem;
+  color: #bebebe;
+  font-size: 1rem;
+  font-weight: 300;
   margin: 0;
   width: auto;
   background: #2c2c2c;
+  transform-style: preserve-3d;
+}
+.copy {
+  display: inline-block;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  margin: 0;
+  padding: 0;
 }
