--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ nav {
 
 .container {
 	display: block;
-	max-width: 1120px;
+	max-width: 1110px;
 	min-width: 800px;
 	margin: auto;
 	padding: 0;
@@ -224,10 +224,9 @@ nav {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	justify-content: center;
+	justify-content: space-between;
 	align-items: center;
-	max-width: 1120px;
-	height: auto;
+	max-width: 1110px;
 	padding: 0;
 	margin: auto;
 }
@@ -235,7 +234,7 @@ nav {
 .featuredItem {
 	height: 220px;
 	width: 270px;
-	margin: 5px;
+	margin: 0 0 10px 0;
 	padding: 0;
 	border: none;
 }
